--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -7,6 +7,7 @@ body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 20px;
   color: #080808;
+  background: #dff0d8;
 }
 p {
   line-height: 1.5;
